changes to have device insertion on first time.